Converted RealMachine to Java